🐛 fix unicode arrows not showing up

--- a/frontend/styles/type.scss
+++ b/frontend/styles/type.scss
@@ -13,7 +13,8 @@
     font-weight: $weight-range;
     font-display: swap;
     src: url('../fonts/#{$folder}/#{$file}-latin.woff2');
-    unicode-range: U+0000-007a, U+00A0-00FF, U+2010-2027, U+20AC, U+2192, U+2764;
+    unicode-range: U+0000-007a, U+00A0-00FF, U+2010-2027, U+20AC, U+2190-2199,
+      U+2764;
   }
 
   @font-face {
